# gen-ai

./: .gitignore  README.md
adk_agents/: .gitignore  README.md  main.py  pyproject.toml
adk_agents/agents/file_analytics_agents/: agent.py  config.py  tools.py
adk_agents/agents/file_analytics_agents/sub_agents/: query_handler.py  question_to_sql.py  sql_to_message.py
adk_agents/agents/plan_execute_agent/: agent.py
adk_agents/agents/simple_agentic_rag/: agent.py
adk_agents/agents/simple_query_analyzer_agent/: agent.py
adk_agents/agents/todo_agent/: agent.py
adk_agents/agents/weather_agent/: agent.py
adk_agents/agents/workflow_agent/: agent.py
embedding/: .gitignore  README.md  main.py  pyproject.toml
embedding/src/: load.py  processor.py  search.py
pdfcursor/ai-pdf/: .gitignore  move-pdf-build.ts  next.config.ts  package-lock.json  package.json
pdfcursor/ai-pdf/src/app/: globals.css  layout.tsx  manifest.json  page.tsx
pdfcursor/ai-pdf/src/components/: AppFeatureMessages.tsx  ChatInterface.tsx  ConditionalRenderer.tsx  DndWrapper.tsx  FileSelector.tsx  MemoizedMarkdown.tsx  OutlineItemDragOverlay.tsx  OutlineRenderer.tsx  OutlineToolbar.tsx  PDFLayout.tsx  PDFPageWrapper.tsx  PDFToolbar.tsx  (+6 more)
rag_article/: DHH Future of Programming, AI, Ruby on Rails, Productivity & Parenting  Lex Fridman Podcast #474.txt  README.md  animal_embedding_match.py  model_response.py  pyproject.toml  transcript_searcher_1.py  transcript_searcher_2.py
recsys/: README.md  main.py  pyproject.toml
recsys/src/: sparse.py
simple_rag/: README.md  main.py  pyproject.toml
(+24 files in other folders)
